# fastapi_ecomm_microservices

./: .gitignore  Microservice_Ecomm.postman_collection.json  changelog.md  docker-compose.yml
customers/: .env  my_script.py  pyproject.toml
customers/alembic/: env.py
customers/alembic/versions/: 0ca22bf0c809_.py  2c0abeaabef4_.py  a5dbaa3ec743_create_custumer_table.py  a9c22a3798e8_.py  b54376cae99b_.py  be7e5345f24e_.py  db8876aa09b9_.py  e62435c6512f_.py
customers/customers/: main.py
customers/customers/api/endpoints/api_v1/: auth.py  customers.py  router.py
customers/customers/core/: config.py  security.py
customers/customers/db/: base.py  base_class.py  session.py
customers/customers/models/: __init__.py  address.py  customer.py
customers/customers/schemas/: custumer_schema.py  token_schema.py
customers/customers/services/: base_service.py  customer_service.py
customers/tests/: conftest.py  test_customers.py
customers/tests/api_v1/: test_login.py
gateway/: .env  pyproject.toml
gateway/gateway/: main.py
gateway/tests/: test_gateway.py
orders/: pyproject.toml
orders/orders/: main.py
orders/tests/: test_orders.py
products/: pyproject.toml
products/products/: main.py
products/tests/: test_products.py
